--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,8 @@
   <link href="./assets/css/mdb.css" rel="stylesheet">    
   <!-- Your custom styles (optional) -->
   <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/css/select2.min.css" rel="stylesheet" />
-  <!--ng deploy --base-href=https://gianmarco21sz.github.io/trinket-cli/-->
+  <!-- angular-cli-ghpages
+    ng deploy --base-href=https://gianmarco21sz.github.io/trinket-cli/-->
   
 </head>
 
